--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav class="nav">
           <ul class="nav-list">          
             <li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
-            <li class="nav-item"><a href="#about me" class="nav-link">Summary</a></li>
+            <li class="nav-item"><a href="#about_me" class="nav-link">Summary</a></li>
             <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>          
             <li class="nav-item"><a href="#code" class="nav-link">Code</a></li>
             <li class="nav-item"><a href="#projects" class="nav-link">Projects</a></li>
@@ -33,6 +33,7 @@
            <h3 class="section-subtitle">Junior Front-End Developer</h3>
         </section>
         <section class="section" id="contacts">
+            <h2 class="section-title">Contacts</h2>
             <ul class="section-list">
               <li class="section-item contacts-item">
                 Izhevsk, Russia
@@ -51,7 +52,7 @@
               </li>
             </ul>
           </section>
-          <section class="section" id="About me">
+          <section class="section" id="About_me">
             <h2 class="section-title">About me</h2>
             <p>
                 Now I started my journey as a developer. Also i am a result-oriented manager with excellent communication skills. Moreover, i have deep knowledge of automation, building and managing a remote sales team.
@@ -112,6 +113,7 @@
               </ul>
           </section>
           <section class="section" id="languages">
+            <h2 class="section-title">Languages</h2>
             <ul class="section-list">
                 <li class="section-item">
                     English - <span>Intermediate</span>
